@@ -1,11 +1,7 @@
--make sure my own database have new indices
-
--check sound files with unicode under Windows
+-get sound files with unicode to work under Windows, both with and without clip prevention
+-move to regex for expand paths?
 
 -turn off sync media checking by default, add gui option
-
--configure dialog is slow on Windows due to server detect
-
 
 -rescale window only when answer picture is shown
 
@@ -19,6 +15,8 @@
 
 -'importing history' text does not show?
 
+-browser column width should be saved as soon as it changes, not on browser close
+
 -no icon on W7
 
 -popup tips (PB)
@@ -31,6 +29,8 @@
  -edit card: tab, tab, control enter
 
  -new user: first time learning queue empty: schedule tomorrow
+
+ -don't abuse cramming scheduler
 
  -tip on double-click to tag names and cards to edit them
  -right click on tag names in browser
@@ -52,6 +52,7 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
  replace set_initial_grade by set_initial_grades(cards)?  (PB)
 -also make sure this is OK when changing card type creates extra cards
 -scheduler.spread_sister_cards? (PB)
+-learn ahead of schedule bug? (PB)
 -recheck database for this through plugin (PB)
 
 -failed card + new cards in two directions: learn all fw cards, get stuck on failed card. Only
@@ -131,6 +132,8 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
 
 -leech detection
 
+-text to speech plugin google
+
 -Faq about how to pronounce Mnemosyne
 
 -import
@@ -202,7 +205,7 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
 
 -heising card type (radical, number of strokes)
 
--auto vacuum after every N openings? What about WM?
+-auto vacuum after every N openings? What about WM? clean_orphaned_static_media_files
 
 -http://www.mblondel.org/journal/2008/08/01/web-canvas/
 
